--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -13,6 +13,7 @@
     border: 3px solid transparent;
     width: 90%;
     display: block;
+    transition: all 0.3s;
 
     &:focus {
       outline: none;
@@ -20,8 +21,8 @@
       border-bottom: 3px solid $color-primary;
     }
 
-    &:focus:invalid{
-        border-bottom: 3px solid $color-secondary-dark;
+    &:focus:invalid {
+      border-bottom: 3px solid $color-secondary-dark;
     }
 
     &::-webkit-input-placeholder {
@@ -32,18 +33,28 @@
     }
   }
 
-  &__label{
+  &__label {
     font-size: 1.2rem;
     font-weight: 700;
     margin-left: 2rem;
-    margin-top: .7rem;
+    margin-top: 0.7rem;
     display: block;
-    transition: all .3s;
+    transition: all 0.3s;
   }
 
-  &__input:placeholder-shown + &__label{
+  &__input:placeholder-shown + &__label {
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem);
+  }
+
+  &__radio-group {
+    width: 49%;
+    display: inline-block;
+  }
+
+  &__radio-label {
+    font-size: $default-font-size;
+    cursor: pointer;
   }
 }
