--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,11 +8,11 @@ $color-white: #fff;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-dark-3: #333;
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
-
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
