--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,10 +5,19 @@
 }
 
 html {
-  font-size: 62.5%;
-  /* Using px as the font size on the html will limit 
-        increase of font-size when a user zoom in there browser */
-  font-size: 10px;
+  font-size: 62.5%; //1rem = 16px
+
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1rem  = 9, 9/16 = 56.25%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%; // 1rem  = 8, 9/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; // 1rem  = 12, 9/16 = 50%
+  }
 }
 
 body {
@@ -17,4 +26,9 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: $color-grey-dark;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0; // 1rem  = 8, 9/16 = 50%
+  }
 }
