--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,14 +1,11 @@
-
-
 .heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    /* To avoid animation shaking */
-    backface-visibility: hidden;
-    margin-bottom: 6rem;
-  }
-  
-  .heading-primary-main {
+  color: $color-white;
+  text-transform: uppercase;
+  /* To avoid animation shaking */
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
+
+  &-main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
@@ -18,51 +15,72 @@
     animation-duration: 1s;
     animation-timing-function: ease-out;
     /* 
-          this delay anime before it occurs
-          animation-delay: 3s; 
-      
-          this specify the number of times anime should occur
-          animation-iteration-count: 3
-        */
+            this delay anime before it occurs
+            animation-delay: 3s; 
+        
+            this specify the number of times anime should occur
+            animation-iteration-count: 3
+          */
+
+    @include respond(phone) {
+      font-size: 5rem;
+      letter-spacing: 1rem;
+    }
   }
-  
-  .heading-primary-sub {
+
+  &-sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.74rem;
     /* Shortcut */
     animation: moveInFromRight 1s ease-out;
-  }
 
-  .heading-secondary{
-    font-size: 3.5rem;
-    font-weight: 700;
-    display: inline-block; 
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    text-transform: uppercase;
-    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-    transition: all .3s;
-
-    &:hover{
-      transform: skewY(2deg) skewX(15deg) scale(1.1);
-      text-shadow: .5rem 1rem 2rem rgba($color-black, .2rem);
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
     }
   }
+}
 
-  .heading-tertiary{
-    font-size: $default-font-size;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-  
-  .paragraph{
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 700;
+  display: inline-block;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  transition: all 0.3s;
 
-    font-size: $default-font-size;
-    
-    &:not(:last-child){
-      margin-bottom: 3rem;
-    }
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2rem);
   }
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  } 
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
+}
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: $default-font-size;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
